slash-1.0.10, 2000.xx.xx
------------------------

*	Make sessions.sid field longer (Jean Gionet)

*	Change order of installing perl in INSTALL (Dave Aiello)

*	Bunches of changes to whitespace / URL / submission
	stuff, come back and fix up these docs later

slash-1.0.9, 2000.10.02
-----------------------

*	Slash now counts the number of times a user is moderated
	up or down

*	Slash now strips \0 characters from all form values

*	Hopefully fixed problem with submissions getting extra whitespace,
	made addition of whitespace in Slash::stripByMode() more
	intelligent

*	Added absolutedir variable (will be used more later) for
	having a URL that is absolute for printing in mails etc.,
	so rootdir can be free to be somewhat relative, if necessary

*	Change passwd text in users.pl from 20 max chars to 12

*	Add new postmode, "code", for posting code; essentially
	the same as extrans, but wraps all input in <CODE> HTML
	tag

* 	Removed default admin users from default db dump, which can be
	created now with the new script sql/adminuser_create.pl, due
	to security hole in knowing admin username/password


slash-1.0.8, 2000.08.18
-----------------------

*	Fixed pollBooth not displaying comments (T Caleb Fauver)

*	Fixed admin.pl messing up some story text, added a new
	parameter to Slash::stripByMode so the "extra whitespace" won't
	be added if $no_white_fix is true (T Caleb Fauver)

*	Remove <rss> tag in RDF file / slashd for now (address
	more fully in bender)

*	Fix portald to be more liberal in which ampersands it decides
	not to convert in slashboxes

*	Fix users.pl to filter realemail, fakeemail, and homepage
	more reasonably

*	Add Slash::chopEntity() to chop out incomplete HTML entities
	at the end of some text

*	Added fancyboxwidth, m2_userpercentage, submission_bonus,
	maxkarma to slashdotrc.pl

*	Fixed bug in slashdotrc.pl referencing m2_goodkarma instead of
	goodkarma

*	Change Slash::getAd() to not return HTML surrounding ad but